# flake8-unfinished

./: flake8_unfinished.py  setup.cfg
tests/: test_flake8_unfinished.py
tests/tests/: UNF001.py  UNF002.py  UNF100.py
