[metadata]
name = flake8_var
version = 1.0.0
description = flake8 plugin that checks variable names
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GideonBear/flake8-var
author = Gideon
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_var
install_requires =
    flake8>=5.0
    ezflake>=1.0.8
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    UNF=flake8_unfinished:UnfinishedPlugin
